ingress-nginx-controller/ingress-rules-production.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: guestbook
          servicePort: 80
