ingress-nginx-controller/ingress-rules-staging.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: staging-guestbook.mstakx.io
    http:
      paths:
      - backend:
          serviceName: guestbook
          servicePort: 80
